<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    tools:context="inacaptemuco.cl.asegurateseguros.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Llenar campos"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/edt_patente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_patente" />

    <EditText
        android:id="@+id/edt_ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ano"
        android:inputType="number" />

    <EditText
        android:id="@+id/edt_uf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_uf" />

    <Spinner
        android:id="@+id/spn_marca"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <EditText
        android:id="@+id/edt_modelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_modelo" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_consultar" />

    <ImageView
        android:id="@+id/imv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
